Update dependency, add Java 17 support.